--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 #server.port=8989
 #spring.profiles.active=dev
-#
-#person.name=\u5F20\u4E09
+
+person.name=\u5F20\u4E09${random.uuid}
+person.address=${person.name}--\u5317\u4EAC
+#\u6307\u5B9A\u9ED8\u8BA4\u503C
+person.email=${person.hello:124@qq.com}
 
 
 #dog.email=123rrr@qq.com
 
 
 #logging.level.com.zdj=trace
-redis.config.address=阿萨德
-redis.config.port=为啥
+#redis.config.address= \u963F\u8428\u5FB7
+#redis.config.port= \u4E3A\u5565
+
+#name = \u5F20\u4E09
+
+#person.email = 124070@qq.com
