--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 #激活dev环境
 spring:
   profiles:
-    active: uat
+    active: prod
 ---
 spring:
   profiles: prod
@@ -14,11 +14,13 @@ spring:
 ##开启springboot的debug 可以查看自动配置报告，用来判断哪些自动配置生效
 ##debug: true
 #
-##日志级别
-##logging:
-##  level:
-##    com.zdj: trace
-#
+#日志级别 将com.zdj包下的日志级别设置为trace
+logging:
+  level:
+    com.zdj: trace
+  # 当前磁盘根目录下创建springboot文件夹和log子文件夹，使用spring.log作为默认文件
+  path: /springboot/log/
+
 ##日志保存在当前磁盘下spring文件夹下的spring.log文件   path是指定目录  file是指定文件  也可以指定日志格式
 #logging:
 #  path: /spring
